# asterics

./: .gitignore  LICENSE  Makefile  README  README.md  settings.sh
doc/: C_doxygen.html  Python_doxygen.html  VHDL_doxygen.html
doc-src/: .gitignore  Makefile
doc-src/c/: Doxyfile  frontpage.md
doc-src/manual/: 00-lst-settings.tex  01-overview.tex  02-using.tex  03-02-c-conventions.tex  03-developing.tex  04-04-software-as_memio.tex  04-05-software-linux.tex  04-software.tex  05-01-interfaces-general.tex  05-02-interfaces-module_signals.tex  05-03-interfaces-as_stream.tex  05-04-interfaces-as_window.tex  05-interfaces.tex  06-01-tools-general.tex  06-02-tools-generator.tex  06-03-tools-estimator.tex  06-04-tools-pipegen.tex  06-05-tools-gui.tex  06-tools.tex  07-05-modules-i2c.tex  07-modules-adapters.tex  07-modules-cameras.tex  07-modules-image-processing.tex  07-modules-memory-interfaces.tex  07-modules-miscellaneous.tex  07-modules-vears.tex  07-modules.tex  08-complex-modules.tex  09-systems.tex  A-appendix-documentation.tex  Makefile  asterics-manual.tex  bibliography.bib
doc-src/python/: Doxyfile  frontpage.md
doc-src/vhdl/: Doxyfile  as_doxygen.vhd  frontpage.md
ipcores/VEARS/: component.xml
modules/: .gitignore
modules/as_base_registers/: README
modules/as_collect/: README
modules/as_crop/: README
modules/as_disperse/: README
modules/as_gensync/: README
modules/as_iic/: README
support/: .gitignore
systems/: .gitignore  README
systems/as_refdesign_zynq_linux/software/create-devices/: CMakeLists.txt  README  as_hardware.h  create-devices.c  load_devices.sh
systems/as_refdesign_zynq_linux/software/memory_loop_test/: CMakeLists.txt  as_config.h  as_hardware.c  asterics.h  main.cpp  unit_test.cpp
(+4140 files in other folders)
